Fix: Added pictures, removed details page and updated README

--- a/src/app/features/menu/menu-list.component.html
+++ b/src/app/features/menu/menu-list.component.html
@@ -48,7 +48,7 @@
     </div>
 
     <div class="items-grid" [@listAnimation]>
-      <a *ngFor="let item of filteredItems; let i = index; trackBy: trackByItemId" [routerLink]="['/menu', item.id]"
+      <a *ngFor="let item of filteredItems; let i = index; trackBy: trackByItemId"
         class="card-link" [style.--i]="i">
         <app-menu-item-card [item]="item"></app-menu-item-card>
       </a>
