--- a/src/styles.css
+++ b/src/styles.css
@@ -13,6 +13,7 @@ html, body {
   -moz-osx-font-smoothing: grayscale;
   background-color: #f9f9f9;
   color: #333;
+  scroll-behavior: smooth;
   overflow-x: hidden;
   overscroll-behavior-x: none;
 }
